# Algorithms

./: .yo-rc.json  CMakeLists.txt  class.md  fc.cpp  klk  klk.cpp  lol  lol.cpp  test.cpp
Arquitectura/Converter/: CMakeLists.txt  main.cpp
Books and Papers/: uva10911.cpp
Code/: CMakeLists.txt  main.cpp
ICPCTeamDoc/: BFS.cpp  DisjointSet.cpp  EventProcessing.cpp  Fenwick.cpp  MST.cpp  SQRTDecomposition.cpp  SegmentTree.cpp
Lectures/: ale  ale.cpp  c  clase  clase.cpp  eo  eo.cpp
Lectures/1DRS/: 1drs.cpp  odrs
Lectures/2DRS/: 2DRS  2DRS.cpp
Lectures/463-A/: CMakeLists.txt  main.cpp
Lectures/463-B/: CMakeLists.txt  main.cpp
Lectures/Bitmask/: OP  OperatorPractice.cpp
Lectures/BubbleSort/: bubbleSort.cpp
Lectures/Catalan/: gen.cpp
Lectures/CoordinateCompression/: CMakeLists.txt  main.cpp
Lectures/DP/: Knapsack  Knapsack.cpp  QDP  hi.cpp  lis  lis.cpp  output.txt
Lectures/Data-Structures/: 10954  GraphDFSgfg.cpp  StructPractice.cpp  iteratorPractice.cpp  learnSet.cpp  linkedListPractice.cpp  (+2 more)
Problems/: A879  A879.cpp  Aprac  Aprac.cpp  BPrac.cpp  Bp  CH  CH.cpp  D  DP  DP.cpp  KS  a  c  c.cpp  c2  clase  clase.cpp  complejidad  complejidad.cpp  ev  ev.cpp  ft  ft.cpp  klk  klk.cpp  merge.cpp  tab  tab.cpp  tarea.txt  tsquare  tsquare.cpp  watermelon  watermelon.cpp
Sack/: CMakeLists.txt  input  main.cpp
Sack2/: CMakeLists.txt  Input  main.cpp
Sack3/: CMakeLists.txt  main.cpp
Watermelon/: CMakeLists.txt  main.cpp
acmlocal2017/: .AmateurMeteorologist.cpp.swp  AmateurMeteorologist.cpp
clase/: dfs.cpp  rumors  rumors.cpp  tprime  tprime.cpp
codeforces/: A110.cpp  A112.out  A158.cpp  A226.out  A266.cpp  A282.out  A339.out  A41.cpp  A50.out  A58.out  A580.cpp  Fizzbuzz.out  TheaterSquare.cpp~  aryaC.out  latigo.out  sasha.out
cpbook/: .#uva10911.cpp  uva10911.cpp
cpp/: .A118.cpp.swp  .A131.cpp.swp  .A236.cpp.swp  .A263.cpp.swp  .A337.cpp.swp  .A69.cpp.swp  208.cpp  A  A112.cpp  A116.cpp  A116.out  A118.cpp  A118.cpp~  A118.out  A131.cpp  A131.out  A133.cpp  A133.out  A158.cpp~  A158.out  A160.out  A231.cpp~  A236.cpp  A263.cpp  A271.cpp  A281.cpp  A281.out  A337.cpp  A337.out  A339.cpp  A467.cpp  A467.out  A479.cpp  A479.out  A486.cpp  A486.out  A50.cpp  A546.cpp  A580.cpp  A580.out  (+25 more)
cpp/contest2017/: AmateurMeteorologist.cpp
cpp/simulacion2015/: navidad.cpp  navidad.out  palabras.cpp  palabras.out
cpp/simulacionp2017/: Ashark.cpp  Clunch.cpp  ashark.out
gostuff/: klk.go
learnCpp/: .cproject  .project  A940.cpp  CDO  CDs  CDsOp.cpp  DFS  DFS.cpp  DFSJoa.cpp  DFSW  FloodFill  FloodFill.cpp  Recursion.cpp  SP.out  StructPractice.cpp  StructPractice.out  StructTricks.cpp  bS.out  bubbleSort.cpp  genNextPerm.cpp  gnp  iP.out  lS  learnSet.cpp  mst  practiceCstyle.cpp  selfDFS  selfDFS.cpp
nacional2017/: ATriangle.out
prepnacional2017/: Ashark.cpp
src/: TheaterSquare.java
(+2776 files in other folders)
